<resources>
    <string name="app_name">Go Service</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="show_password">Show Password</string>
    <string name="signin">Sign in</string>
    <string name="new_to_app">New to App?</string>
    <string name="my_account">My Account</string>
    <string name="previous_bookings">Previous Bookings</string>
    <string name="my_ratings">My Ratings</string>
    <string name="manage_payments">Manage Payments</string>
    <string name="addresses">Addresses</string>
    <string name="memberships">Memberships</string>
    <string name="work_for_us">Work For Us</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_name">Enter Name</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="search">Search</string>
    <string name="current_location">Current Location</string>
    <string name="ac_image">AC image</string>
    <string name="search_icon">search icon</string>
    <string name="a_c_service_and_repair">A.C Service &amp; repair</string>
    <string name="washing_machine_service_and_repair">Washing Machine Service &amp; Repair</string>
    <string name="refrigerator_service_and_repair">Refrigerator Service &amp; Repair</string>
    <string name="offers">Offers</string>
    <string name="microwave_service_amp_repair">Microwave Service &amp; Repair></string>
    <string name="geyser_repair_amp_service">Geyser Repair &amp; Service</string>
    <string name="rectangle">rectangle</string>
    <string name="polygon">polygon</string>
    <string name="refer_and_get_free_services">Refer and get Free Services</string>
    <string name="ellipse">ellipse</string>
    <string name="drop_pin">drop pin</string>
    <string name="gift">gift</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search_for_your_location_society_apartment">Search for your Location/Society/Apartment</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="default_address">DEFAULT ADDRESS</string>
    <string name="poojan_prajapati">Poojan Prajapati</string>
    <string name="c_31_pramukh_swami_tirth_society_nr_narayanwadi_atladara">C-31 Pramukh Swami Tirth Society,Nr Narayanwadi Atladara</string>
    <string name="vadodara_390012">Vadodara-390012</string>
    <string name="edit">EDIT</string>
    <string name="remove">REMOVE</string>
    <string name="gujarat">Gujarat</string>
    <string name="other_addresses">OTHER ADDRESSES</string>
    <string name="plus_sign">plus sign</string>
    <string name="crosshairs_image">crosshairs image</string>
    <string name="arrow">arrow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_new_new_app_account">Create a new account</string>
    <string name="logo">logo</string>
    <string name="by_continuing_you_agree_to_app_s">By continuing, you agree to App\'s</string>
    <string name="conditions_of_use">Conditions of Use</string>
    <string name="and">and</string>
    <string name="privacy_notice">Privacy Notice.</string>
    <string name="line">line</string>
    <string name="orders">Orders</string>
    <string name="wallet">Wallet</string>
    <string name="rating_1">Just like you rate UC professionals for the overall quality of the service,they also rate you on a scale of 1 to 5.Your aggregate rating is calculated after you have recieved ratings in at least 3 services</string>
    <string name="rating_2">Did you know that nearly 80% of UC customers are 5-star rated. If you also want that coveted rating, here are a few kind gestures.</string>
    <string name="rating_3">Show them you care by offering water, it\'ll help raise their spirit and energy levels</string>
    <string name="ratings">You Currently have No Ratings</string>
    <string name="rating1">Introduction customer ratings</string>
    <string name="rating2">How can I be a 5-star customer?</string>
    <string name="rating3">Empathise</string>
    <string name="rating_4">Provide access to the washroom (if required); they might have been on the go for a while!</string>
    <string name="rating4">Support</string>
    <string name="rating5">Respect</string>
    <string name="rating_5">Treat professionals the way you\'d expect to be treated.</string>
    <string name="rating_6">Your aggregate rating is a simple average of all the ratings you\'ve received from UC professionals in the past. These individual ratings are anonymous, and so won\'t be visible to you or the professional</string>
    <string name="rating6">How is customer rating calculated?</string>
    <string name="total_wallet_balance">Total Wallet Balance</string>
    <string name="amount">100</string>
    <string name="qr_button">qr button</string>
    <string name="gift_button">gift button</string>
    <string name="plus_button">plus button</string>
    <string name="payment_option">Payment Option</string>
    <string name="debit_and_credit_cards">Debit and Credit Cards</string>
    <string name="upi">UPI</string>
    <string name="booking_plans"><![CDATA[Booking & plans]]></string>
    <string name="help1">Help</string>
    <string name="work_for_us_1">Flexibility and work-life balance: Working for a service app company can offer a lot of flexibility and work-life balance. Employees can typically choose their own hours and work as much or as little as they want. This can be a great option for people with families or other commitments outside of work. Opportunity to earn good money: Service app technicians can earn good money, especially if they are skilled and experienced. In addition to their base hourly wage, technicians can also earn tips from customers. Job security: The demand for on-demand appliance repair services is growing rapidly, so there is a lot of job security in this field. Chance to help people: Service app technicians have the opportunity to help people in need. When someone\'s appliance breaks down, it can be a very stressful situation. Service app technicians can help to relieve that stress by fixing the appliance quickly and efficiently. Opportunity to learn and grow: Service app companies often offer training and development programs for their technicians. This gives technicians the opportunity to learn new skills and advance in their careers. Here are some additional reasons that may be specific to your company: You offer competitive pay and benefits. You have a strong reputation for customer service. You provide your technicians with the tools and resources they need to be successful. You have a positive and supportive work environment. You offer opportunities for growth and advancement. When hiring new employees, you should emphasize these benefits and explain how your company is different from other service app companies. You should also highlight the unique opportunities that your company offers, such as the chance to work with a variety of clients or the opportunity to learn new skills through training and development programs.</string>
    <string name="work_for_us2">Acquire active users and service providers: You can do this by marketing your app through online and offline channels, such as social media, search engine optimization (SEO), and paid advertising. You can also offer incentives to users and service providers to sign up for your app. Generate revenue: You can generate revenue by charging users for services rendered. You can also offer premium features and services for a fee. Achieve a high customer satisfaction rating: You can do this by providing excellent customer service and by ensuring that your service providers are skilled and reliable. You should also collect feedback from customers and use it to improve your services. Expand to new geographical areas: Once you have established a strong presence in your current market, you can start expanding to new geographical areas. You can do this by partnering with local businesses or by opening your own offices in new markets. Develop new service offerings: You can expand your range of services to include preventative maintenance, installation, and other home repair services. This will allow you to capture a larger share of the home services market.</string>
    <string name="member">M E M B E R</string>
    <string name="m_e_m_b_e_r">M E M B E R</string>
    <string name="membership_benefits">Membership Benefits</string>
    <string name="get_membership">GET MEMBERSHIP</string>
    <string name="enter_prepaid_debit_or_credit_card_details">Enter Prepaid,Debit or Credit Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_validity">Expiry/Validity</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="mm_yy">MM/YY</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="enter_upi_id">Enter UPI ID</string>
    <string name="xyz">xyz</string>
    <string name="conditions">You agree to provide us with accurate personal information, such as your email address, mailing address and other contact details in order to complete your order or contact you as needed. You agree to promptly update your account and information. You authorize us to collect and use this information to contact you in accordance with our Privacy Policy.</string>
    <string name="privacy_notice_text">We are responsible for maintaining and protecting the Personal Information under our control. We have designated an individual or individuals who is/are responsible for compliance with our privacy policy. Knowledge and consent are required for the collection, use or disclosure of Personal Information except where required or permitted by law.</string>
    <string name="enter_house_number_and_area">Enter House Number and Area</string>
    <string name="enter_city_and_pin">Enter City and Pin</string>
    <string name="enter_state">Enter State</string>
    <string name="ok">OK</string>
    <string name="add">ADD</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="redeem">Redeem</string>
    <string name="install">Install</string>
    <string name="uninstall">Uninstall</string>
    <string name="service">Service</string>
    <string name="repair">Repair</string>
    <string name="repair1">Repair</string>
    <string name="install1">Install</string>
    <string name="_30_days_warranty">30 DAYS WARRANTY</string>
    <string name="price">Price</string>
    <string name="installation_of_indoor_outdoor_units_with_free_gas_check"><![CDATA[\u2022 Installation of indoor & outdoor units with free gas check]]></string>
    <string name="procurement_of_spare_at_extra_cost">\u2022 Procurement of spare(at extra cost)</string>
    <string name="add1">Add</string>
    <string name="uninstall1">Uninstall</string>
    <string name="service1">Service</string>
    <string name="repair_ac">Repair</string>
    <string name="expected_price_rs">Expected Price: Rs</string>
    <string name="uninstallation_of_both_indoor_and_outdoor_units">\u2022 Uninstallation of both indoor and outdoor units</string>
    <string name="get_2x_deeper_dust_removal_with_foamjet_technology">\u2022 Get 2x deeper dust removal with foamjet technology</string>
    <string name="join_us">JOIN US</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="submit">SUBMIT</string>
</resources>