<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"

    >

    <TextView
        android:id="@+id/add_new_add1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/add_new_address"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_new_add1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_name"
        android:textColor="@color/black"
        android:textSize="13sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enter_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_name"
        android:layout_marginStart="5dp"
        android:hint="@string/enter_house_number_and_area"
        android:textColor="@color/black"
        android:textSize="13sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enter_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_address"
        android:layout_marginStart="5dp"
        android:hint="@string/enter_city_and_pin"
        android:textColor="@color/black"
        android:textSize="13sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enter_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_city"
        android:layout_marginStart="5dp"
        android:hint="@string/enter_state"
        android:textColor="@color/black"
        android:textSize="13sp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:backgroundTint="#2940BBD6"
        android:layout_below="@+id/enter_state"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>