<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="844dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="273dp"
            android:layout_height="170dp"
            android:src="@drawable/img"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="117dp"
            android:contentDescription="@string/logo" />
        <TextView
            android:id="@+id/sign_in"
            android:layout_width="80dp"
            android:layout_height="29dp"
            android:text="@string/sign_in"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="321dp"
            android:gravity="center_horizontal|top"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#B9000000"/>
        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="120dp"
            android:layout_height="21dp"
            android:layout_marginStart="275dp"
            android:layout_marginBottom="15dp"
            android:layout_below="@+id/sign_in"
            android:text="@string/forgot_password"
            android:textColor="#B326A698"

            />
        <EditText
            android:id="@+id/et_signin_email"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_background"
            android:layout_marginStart="14dp"
            android:layout_below="@+id/sign_in"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:paddingStart="10dp"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/et_signin_password"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:background="@drawable/et_background"
            android:layout_marginStart="14dp"
            android:layout_below="@+id/et_signin_email"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:paddingStart="10dp"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />
        <CheckBox
            android:id="@+id/show_pass"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:text="@string/show_password"
            android:layout_below="@+id/et_signin_password"
            android:layout_marginTop="14.8dp"
            android:layout_marginStart="18dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@+id/show_pass"
            android:layout_marginStart="39dp"
            android:layout_marginTop="33dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            app:cornerRadius="100dp" />
        <RelativeLayout
            android:id="@+id/nested_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_sign_in"
            android:layout_marginStart="51dp"
            android:layout_marginTop="24dp"

            >
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_continuing_you_agree_to_app_s"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditions_of_use"
                android:textColor="#B326A698"
                android:textSize="10sp"
                android:layout_toEndOf="@+id/tv1"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textSize="10sp"
                android:layout_toEndOf="@+id/tv2"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_notice"
                android:textColor="#B326A698"
                android:textSize="10sp"
                android:layout_below="@+id/tv1"
                tools:ignore="SmallSp" />
        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line1"
            android:layout_marginStart="27dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/nested_relative_layout"
            android:contentDescription="@string/line" />
        <TextView
            android:layout_width="163dp"
            android:layout_height="21dp"
            android:text="@string/new_to_app"
            android:textSize="10sp"
            android:layout_marginStart="156dp"
            android:layout_below="@id/nested_relative_layout"
            android:layout_marginTop="21dp"
            tools:ignore="SmallSp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line1"
            android:layout_marginStart="235dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/nested_relative_layout"
            android:contentDescription="@string/line" />
        <Button
            android:id="@+id/btn_new_acc"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_below="@+id/nested_relative_layout"
            android:layout_marginStart="39dp"
            android:layout_marginTop="63dp"
            android:backgroundTint="#616161"
            android:text="@string/create_a_new_new_app_account"
            android:textColor="#FFFFFF"
            app:cornerRadius="100dp"
            />
    </RelativeLayout>
</ScrollView>