<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#f5f5f5"
    tools:context=".MyRating">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout

            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:layout_marginTop="81dp"
            android:background="#33C8A2C8">

            <TextView
                android:id="@+id/you_current"
                android:layout_width="244dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="34dp"
                android:text="@string/ratings"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="34dp"
                android:layout_toRightOf="@+id/you_current"
                android:src="@drawable/star1" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rectangle_2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rating_head_1"
                android:layout_width="293dp"
                android:layout_height="24dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="37dp"
                android:text="@string/rating1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/rating_para_1"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="13dp"
                android:text="@string/rating_1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/minimal"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/rating_head_2"
                android:layout_width="293dp"
                android:layout_height="24dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="37dp"
                android:text="@string/rating2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_para_2"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="13dp"
                android:text="@string/rating_2"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/minimal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/rating_head_3"
                android:layout_width="293dp"
                android:layout_height="24dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="37dp"
                android:text="@string/rating3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_para_3"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="13dp"
                android:text="@string/rating_3"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/minimal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/rating_head_4"
                android:layout_width="293dp"
                android:layout_height="24dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="37dp"
                android:text="@string/rating4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_para_4"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="13dp"
                android:text="@string/rating_4"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/minimal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/rating_head_5"
                android:layout_width="293dp"
                android:layout_height="24dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="37dp"
                android:text="@string/rating5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_para_5"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="13dp"
                android:text="@string/rating_5"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/minimal"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/rating_head_6"
                android:layout_width="293dp"
                android:layout_height="24dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="37dp"
                android:text="@string/rating6"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_para_6"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="13dp"
                android:text="@string/rating_6"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/minimal"
                android:textStyle="bold"
                />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>