<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"

    >

    <TextView
        android:id="@+id/add_new_add1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/join_us"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_new_add1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_name"
        android:textColor="@color/black"
        android:textSize="13sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_name"
        android:layout_marginStart="5dp"
        android:hint="@string/enter_mobile_number"
        android:textColor="@color/black"
        android:textSize="13sp"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile_number"
        android:layout_marginStart="5dp"
        android:hint="@string/enter_your_email"
        android:textColor="@color/black"
        android:textSize="13sp"
        tools:ignore="TouchTargetSizeCheck" />



    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:backgroundTint="#2940BBD6"
        android:layout_below="@+id/enter_email"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>