<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    >
    <TextView
        android:id="@+id/card"
        android:layout_width="305dp"
        android:layout_height="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="26dp"
        android:text="@string/enter_prepaid_debit_or_credit_card_details"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/black"

        />
    <ImageView
        android:id="@+id/cancel_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/cross"
        android:layout_marginTop="20dp"
        android:layout_marginStart="351dp"
        android:contentDescription="xyz" />
    <TextView
        android:id="@+id/card_number"
        android:layout_width="63dp"
        android:layout_height="12dp"
        android:text="@string/card_number"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        android:layout_below="@+id/card"
        android:layout_marginStart="26dp"
        android:layout_marginTop="14dp"/>

    <EditText
        android:id="@+id/enter_card_number"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_below="@+id/card_number"
        android:layout_marginStart="26dp"
        android:layout_marginTop="11dp"
        android:hint="@string/enter_card_number"
        android:inputType="number"
        android:maxLength="16"
        android:textSize="15sp"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/validity"
        android:layout_width="66dp"
        android:layout_height="12dp"
        android:text="@string/expiry_validity"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        android:layout_below="@+id/enter_card_number"
        android:layout_marginStart="26dp"
        android:layout_marginTop="11dp"/>
    <EditText
        android:id="@+id/expiry"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_below="@+id/validity"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/mm_yy"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/cvv"
        android:layout_width="21dp"
        android:layout_height="12dp"
        android:text="@string/cvv"
        android:textSize="10sp"
        tools:ignore="SmallSp"
       android:layout_toRightOf="@+id/validity"
        android:layout_below="@+id/enter_card_number"
        android:layout_marginStart="101dp"
        android:layout_marginTop="11dp"/>
    <EditText
        android:id="@+id/enter_cvv"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginStart="101dp"
        android:layout_below="@+id/cvv"
        android:layout_toRightOf="@id/validity"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="3"
        android:hint="CVV"
        android:textSize="15sp"
        android:importantForAutofill="no"/>
    <Button
        android:id="@+id/pay"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:text="@string/pay"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/enter_cvv"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2940BBD6"
        android:layout_marginStart="86dp"/>
    

</RelativeLayout>